--- a/src/comp/Home/HomePage.css
+++ b/src/comp/Home/HomePage.css
@@ -12,3 +12,8 @@
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
   }
   
+  .home{
+    max-width: 1500px;
+    margin-left: auto;
+    margin-right: auto;
+  }
