--- a/src/comp/Product/Product.css
+++ b/src/comp/Product/Product.css
@@ -2,11 +2,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+   justify-content: end;
     margin: 10px;
     padding: 20px;
     width: 100%;
-    max-height: 500px;
+    max-height: 400px;
     min-width: 100px;
     background-color: white;
     z-index: 1;
@@ -17,7 +17,7 @@
     display: flex;
   }
   
-  .product  img {
+  .product  > img {
     max-height: 200px;
     width: 100%;
     object-fit: contain;
