--- a/src/comp/Checkout/Checkout.css
+++ b/src/comp/Checkout/Checkout.css
@@ -1,4 +1,11 @@
+
 .checkout_ad{
     width: 100%;
     margin-bottom: 10px;
+}
+
+.checkout_title{
+    margin-right: 10px;
+    padding: 10px;
+    border-bottom: 1px solid lightgrey;
 }
