--- a/src/comp/Nav/Nav.css
+++ b/src/comp/Nav/Nav.css
@@ -9,10 +9,11 @@
   }
   
   .header img {
-    width: 100px;
+    width: 30px;
+    border-radius: 2px;
     margin-left: 20px;
     margin-right: 20px;
-    margin-top: 18px;
+    margin-top: 1px;
     object-fit: contain;
      
   }
