--- a/src/comp/Contact/Contact.css
+++ b/src/comp/Contact/Contact.css
@@ -1,13 +1,16 @@
 /* Contact.css */
 
 .contact-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+  background-image: url('../../assets/contact.avif'); /* Replace with your image path */
+  background-size: cover;
+ /* Resize the image to cover the container */
+ /* Center the image horizontally and vertically */
+}
   .contact-title {
     font-size: 2rem;
     font-weight: bold;
@@ -20,7 +23,7 @@
     width: 400px;
     padding: 2rem;
     border-radius: 5px;
-    background-color: #f0f0f0;
+    background-color: grey;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   }
   
@@ -46,7 +49,7 @@
     border: none;
     border-radius: 3px;
     background-color: #333;
-    color: #fff;
+    color: white;
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.2s ease-in-out;
