added heading properly

--- a/src/comp/Orders/Offers.css
+++ b/src/comp/Orders/Offers.css
@@ -1,8 +1,13 @@
 /* Place these styles in your Offers.css file */
-
-.header {
-    margin-left: 50px; /* Adjust margin as needed */
-  }
+.header{
+    background-color: #dea71c;
+    display: flex;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+    padding-left: 500px;
+}
   
   .offers {
     display: flex;
